Fixed overflow issues

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,9 +1,7 @@
 @import "./variables.scss";
 
-.home {
-  height: 100%;
-}
 .content {
+  position: relative;
   height: 100%;
   display: grid;
   grid-template-rows: 1fr auto;
@@ -52,21 +50,26 @@
 
 .animation-container {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 80vw;
   width: 40vw;
-  right: 0%;
+  right: 0;
+  margin-left: 100px;
   top: 50%;
-  transform: translateY(-50%);
-  overflow: hidden;
+  transform: translate(25%, -50%);
 
   .globe-container {
     position: absolute;
-    left: 40%;
-    top: 25%;
     width: 100%;
     height: 50%;
 
     animation: rotate 20s linear infinite;
+
+    .globe {
+      opacity: 0.5;
+    }
 
     .ball {
       position: absolute;
@@ -93,7 +96,6 @@
     position: absolute;
     width: 150%;
     height: 100%;
-    left: 15%;
   }
 }
 
